// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthHeader Snapshot Tests should match snapshot with all props 1`] = `
<View
  align="center"
  justify="space-between"
  row={true}
>
  <View
    align="center"
    gap={20}
    row={true}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="svg-icon-arrow-back"
    >
      <Text>
        arrow-back
      </Text>
    </View>
    <Text
      medium={true}
      size={20}
    >
      Test Title
    </Text>
  </View>
  <Text>
    Custom
  </Text>
</View>
`;

exports[`AuthHeader Snapshot Tests should match snapshot with default props 1`] = `
<View
  align="center"
  justify="space-between"
  row={true}
>
  <View
    align="center"
    gap={20}
    row={true}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="svg-icon-app-icon"
    >
      <Text>
        app-icon
      </Text>
    </View>
  </View>
  <View
    radius={1000}
    style={
      {
        "borderColor": "#F0F0F0",
        "borderWidth": 1,
        "padding": 10,
      }
    }
  >
    <Text>
      Need help?
    </Text>
  </View>
</View>
`;
